--- a/scss/main.scss
+++ b/scss/main.scss
@@ -22,18 +22,18 @@ body {
   align-items: center;
   align-content: center;
   flex-direction: column;
-  background: linear-gradient(135deg, #e91e63, #9c27b0);
+  background: linear-gradient(135deg, #000, #fff);
   background-size: 400% 400%;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  animation: baggrundAnim 6s ease infinite;
+  //animation: baggrundAnim 60s ease infinite;
 
 
 
   .loginBox {
     width: 100%;
     max-width: 500px;
-    background: rgba(255,255,255,.5);
+ //   background: rgba(255,255,255,.5);
     color: #FFF;
     padding: 1em;
     border-radius: 10px;
